2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/time-out-lock-screen.c: Remove invalid cast from
	  GtkButton to GtkMisc.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/Makefile.am: Update Makefile to fix make 
	  distcheck.
	* panel-plugin/time-out.h: Fix copyright year.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/time-out-lock-screen.c: Remove debug statement
	  and add a new translatable string.

2007-05-06	Jannis Pohlmann <jannis@xfce.org>

	* Initial import of a complete rewrite of the plugin. This one
	  is much cleaner and more reliable (no timer race conditions
	  anymore).

2007-02-18	Jannis Pohlmann <jannis@xfce.org>

	* README: Prevent geeks all over the world from trying to drink
	  cigarettes. This is not good for you! Neither is smoking them,
	  anyway ...

2007-02-18	Jannis Pohlmann <jannis@xfce.org>

	* icons/48x48/xfce4-time-out-plugin.png, 
	  icons/scalable/xfce4-time-out-plugin.svg: Replace dummy icon 
	  with a modified version of the Tango "appointment-new" icon.
	* TODO: Add tasks to be done before the first release.

2007-02-18	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/time-out-dialogs.c,
	  panel-plugin/xfce4-time-out-plugin.desktop: Update strings.

2007-02-18	Jannis Pohlmann <jannis@xfce.org>

	* icons/scalable/xfce4-time-out-plugin.svg: Add missing dummy 
	  icon from the sample plugin.
	* panel-plugin/xfce4-time-out-plugin.desktop.in.in: Add missing 
	  desktop entry template.

2007-02-18	Jannis Pohlmann <jannis@xfce.org>

	* Initial import.